logs/watchdog_20251011_1530.log
[11/10/2025 15:30:02,47] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 15:30:02,78] END WATCHDOG 
